--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -101,7 +101,8 @@
 	</style>
 </head>
 <head>
-    <title>Solicitud de arriendo de cancha</title>
+    <title>Solicitud de arriendo de cancha de [fútbol/futbol/tenis]"</title>
+    <p>En donde el usuario debe reemplazar "[fútbol/futbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
   </head>
   <body>
     <p>Asunto: Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</p>
@@ -113,6 +114,7 @@
       <li>[Día] [Horario]</li>
     </ul>
     <p>Saludos cordiales, [Nombre completo] - [Rol USM].</p>
+    <p>En donde el usuario debe reemplazar” [Día] [Horario]” por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
   </body>
 </html>
 
