--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -99,11 +99,9 @@
 			background-color: #dddddd;
 		}
 	</style>
-</head>
 <head>
-    <title>Solicitud de arriendo de cancha de [fútbol/futbol/tenis]"</title>
-    <p>En donde el usuario debe reemplazar "[fútbol/futbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
-  </head>
+  <title>Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</title>
+</head>
   <body>
     <p>Asunto: Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</p>
     <p>Contenido:</p>
@@ -114,7 +112,13 @@
       <li>[Día] [Horario]</li>
     </ul>
     <p>Saludos cordiales, [Nombre completo] - [Rol USM].</p>
-    <p>En donde el usuario debe reemplazar” [Día] [Horario]” por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
   </body>
+	
+<head>
+  <title>Consideraciones para el correo:</title>
+</head>
+	<p>Para el asunto el usuario debe reemplazar "[fútbol/futbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
+	<p>Para el contenido del correo el usuario debe reemplazar el [Día] y [Horario] por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
+	<p>Para el horario se debe reemplazar escribiendo por ejemplo "Bloque 1-2".</p>
 </html>
 
