--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -57,7 +57,7 @@
     </style>
   </head>
   <body>
-    <h1>Solicitud de arriendo de cancha</h1>
+    <h1>Formato para la solicitud de arriendo de cancha</h1>
     <p><strong>Asunto:</strong> Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</p>
     <p><strong>Contenido:</strong></p>
     <ul>
@@ -71,10 +71,10 @@
 
     <h2>Consideraciones para el correo:</h2>
     <p>Para el asunto, el usuario debe reemplazar "[fútbol/futbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
-    <p>Para el contenido del correo, el usuario debe reemplazar el [Día] y [Horario] por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
-    <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2".</p>
+    <p>Para el contenido del correo, el usuario debe reemplazar el [Nombre del día] y [Bloque de Horario] por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
+    <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa arriendo desde las 8:15AM hasta las 9:25AM.</p>
 
-    <p class="footnote">Este correo es solo una simulación. Por favor, no responda ni realice ninguna acción relacionada con este correo.</p>
+    <p class="footnote">Si desesa ver una conversion de bloque a Hora, haga click aqui (<a href="Planilla/Correo.html">Conversor Bloque-Hora<a>).</p>
   </body>
 </html>
 
