--- a/Planilla/Conversor.html
+++ b/Planilla/Conversor.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Horarios</title>
+	<style>
+		table {
+			border-collapse: collapse;
+		}
+
+		th, td {
+			border: 1px solid black;
+			padding: 5px;
+			text-align: center;
+		}
+
+		th {
+			background-color: lightgray;
+		}
+	</style>
+</head>
+<body>
+	<table>
+		<tr>
+			<th>Curso</th>
+			<th>Bloque</th>
+			<th>Horario</th>
+			<th>Horario</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>08:15/08:50</td>
+			<td>08:50/09:25</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>4</td>
+			<td>09:35/10:10</td>
+			<td>10:10/10:45</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>6</td>
+			<td>10:55/11:30</td>
+			<td>11:30/12:05</td>
+		</tr>
+		<tr>
+			<td>7</td>
+			<td>8</td>
+			<td>12:15/12:50</td>
+			<td>12:50/13:25</td>
+		</tr>
+		<tr>
+			<td>9</td>
+			<td>10</td>
+			<td>14:30/15:05</td>
+			<td>15:05/15:40</td>
+		</tr>
+		<tr>
+			<td>11</td>
+			<td>12</td>
+			<td>15:50/16:25</td>
+			<td>16:25/17:00</td>
+		</tr>
+		<tr>
+			<td>13</td>
+			<td>14</td>
+			<td>17:10/17:45</td>
+			<td>17:45/18:20</td>
+		</tr>
+		<tr>
+			<td>15</td>
+			<td>16</td>
+			<td>18:30/19:05</td>
+			<td>19:05/19:40</td>
+		</tr>
+		<tr>
+			<td>17</td>
+			<td>18</td>
+			<td>19:50/20:25</td>
+			<td>20:25/21:00</td>
+		</tr>
+		<tr>
+			<td>19</td>
+			<td>20</td>
+			<td>21:10/21:45</td>
+			<td>21:45/22:20</td>
+		</tr>
+	</table>
+</body>
+</html>
 
