--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -75,7 +75,7 @@
     <p>Para el contenido del correo, el usuario debe reemplazar el [Nombre del día] y [Bloque de Horario] por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
     <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa arriendo desde las 8:15AM hasta las 9:25AM.</p>
 
-    <p class="footnote">Si desesa ver una conversion de bloque a Hora, haga click aqui (<a href="Planilla/Correo.html">Conversor Bloque-Hora<a>).</p>
+    <p class="footnote">Si desesa ver una conversion de bloque a Hora, haga click aqui (<a href="Planilla/Conversor.html">Conversor Bloque-Hora<a>).</p>
   </body>
 </html>
 
