--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -76,6 +76,16 @@
     <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa arriendo desde las 8:15AM hasta las 9:25AM.</p>
 
     <p class="footnote">Si desesa ver una conversion de bloque a Hora, haga click aqui (<a href="Planilla/Conversor.html">Conversor Bloque-Hora<a>).</p>
+      
+    <h3>Ejemplo de correo</h1>
+    <p><strong>Asunto:</strong>Solicitud arriendo cancha de fútbol</p>
+    <p>Solicito por orden de prioridad los siguientes horarios para arrendar</p>
+    <ul>
+      <li>Sábado 15-17 </li>
+      <li>Martes 20-22 </li>
+      <li>Lunes 19-20 </li>
+    </ul>
+    <p>Saludos cordiales, Juan Pérez - 2021xxxxx-x.</p>
   </body>
 </html>
 
