--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -76,7 +76,7 @@
     <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa arriendo desde las 8:15AM hasta las 9:25AM.</p>
 
     <p class="footnote">Si desesa ver una conversion de bloque a Hora, haga click aqui.</p>
-    <a href="Conversor.html">Conversor Bloque-Hora<a>
+    <a href="Conversor.html">Conversor Bloque-Hora</a>
       
     <hr>
       
