--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -80,7 +80,7 @@
       
     <hr>
       
-    <h3>Ejemplo de correo</h1>
+    <h3>Ejemplo de correo</h3>
     <p><strong>Asunto:</strong>Solicitud arriendo cancha de fútbol</p>
     <p>Solicito por orden de prioridad los siguientes horarios para arrendar</p>
     <ul>
@@ -110,7 +110,7 @@
       <li>Sábado 11-13  </li>
       <li>Lunes 20-21   </li>
     </ul>
-    <p>Saludos cordiales, Carlos López - 9876543..</p>
+    <p>Saludos cordiales, Carlos López - 9876543.</p>
   </body>
 </html>
 
