--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -80,7 +80,7 @@
       
     <hr>
       
-    <h3>Ejemplo de correo</h3>
+    <h3>Ejemplos de correos</h3>
     <p><strong>Asunto:</strong>Solicitud arriendo cancha de fútbol</p>
     <p>Solicito por orden de prioridad los siguientes horarios para arrendar</p>
     <ul>
