--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -58,7 +58,7 @@
   </head>
   <body>
     <h1>Formato para la solicitud de arriendo de cancha</h1>
-    <p><strong>Asunto:</strong> Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</p>
+    <p><strong>Asunto:</strong> Solicitud de arriendo de cancha de [fútbol/tenis]</p>
     <p><strong>Contenido:</strong></p>
     <p>Solicito arrendar los siguientes horarios por orden de prioridad:</p>
     <ul>
@@ -71,7 +71,7 @@
     <hr>
 
     <h2>Consideraciones para el correo:</h2>
-    <p>Para el asunto, el usuario debe reemplazar "[fútbol/futbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
+    <p>Para el asunto, el usuario debe reemplazar "[fútbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
     <p>Para el contenido del correo, el usuario debe reemplazar el [Nombre del día] y [Bloque de Horario] por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
     <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa arriendo desde las 8:15AM hasta las 9:25AM.</p>
 
@@ -81,7 +81,7 @@
     <hr>
       
     <h3>Ejemplos de correos</h3>
-    <p><strong>Asunto:</strong>Solicitud arriendo cancha de fútbol</p>
+    <p><strong>Asunto:</strong>Solicitud arriendo cancha de tenis</p>
     <p>Solicito por orden de prioridad los siguientes horarios para arrendar</p>
     <ul>
       <li>Sábado 15-17 </li>
