--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p>Para solicitar canchas deben mandar correo a SmartCanchasUSM@gmail.com con el siguiente formato</p>   
         <a href="Planilla/Correo.html">Visualizacion correo de arriendo</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
-        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo.png?raw=true" alt="Ejemplo del correo de arriendo">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20arriendo.png?raw=true" alt="Ejemplo del correo de arriendo">
         <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p>
         <p>Ejemplo de arriendo exitoso: </p> 
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo exitoso">
