--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <article>
         <h2>Bienvenido a SmartCanchasUSM</h2>
         <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para arrendar una cancha de tenios o futbol de la universidad.</p>
-        <p>Primero, se les proporcionará un enlace a un excel en la cual estarán disponibles todos los horarios de las canchas de tenis y fútbol. Ustedes podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección SmartCanchasUSM@gmail.com.</p>
+        <p>Primero, se les proporcionará un enlace a un excel en la cual estarán disponibles todos los horarios de las canchas de tenis y fútbol. Ustedes podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección smartcanchas@gmail.com</p>
         <p>Es importante seguir el formato establecido (<a href="Planilla/Correo.html">Ver aqui<a>) en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el Excel se actualizará para reflejar la reserva.</p>
         <p>A continuación podran visualizar un video del proceso completo:</p>
       </article>
@@ -107,7 +107,7 @@
 
       <section id="Solicitud">
         <h3>Solicitud de arriendo</h3>
-        <p>Para solicitar canchas deben mandar correo a SmartCanchasUSM@gmail.com con el siguiente formato</p>   
+        <p>Para solicitar canchas deben mandar correo a smartcanchas@gmail.com con el siguiente formato</p>   
         <a href="Planilla/Correo.html">Visualizacion correo de arriendo</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20arriendo.png?raw=true" alt="Ejemplo del correo de arriendo">
@@ -123,8 +123,7 @@
     <section id="about">
       <h3>Acerca de SmartCanchasUSM</h3>
       <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
-      <p>Si tienes alguna pregunta respecto al arriendo de canchas, puedes consultar a través del siguiente correo electrónico: FanClubDeMessi@gmail.com</p>
-      <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: FanClubDeMessi@gmail.com</p>
+      <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@gmail.com</p>
     </section>
 
     <footer>
