--- a/Planilla/Conversor.html
+++ b/Planilla/Conversor.html
@@ -4,6 +4,14 @@
 	<title>Horarios</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
+	      body {
+			font-family: Arial, sans-serif;
+			font-size: 16px;
+			line-height: 1.5;
+			color: #333;
+			background-color: #f2f2f2;
+			padding: 20px;
+      		}
 		table {
 			border-collapse: collapse;
 		}
