--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2>Horario del arriendo de canchas</h2>
         <p>Es importante mencionar que el proceso de arriendo de canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
         <p>En el siguiente enlace estará la hoja de calculo en donde se puede visualizar los horarios del arriendo de las canchas.</p>
-        <p>https/</p>
+        <a href>https://docs.google.com/spreadsheets/d/1fD98wl-ptG2dr960RId1YKms4A5WgnxXyDogMf6XXJ8/edit#gid=0/</a>
         <p style="color: green;">Verde: Disponible para arriendo.</p>
         <p style="color: red;">Rojo: Ocupado o no habilitado</p>
         <p style="color: orange;">Naranjo: Ocupado por profesor</p>
