--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SmartCanchasUSM</title>
+     <div class="title-with-image">
+      <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Logo_UTFSM.png?raw=true">
+      <title>SmartCanchasUSM</title>
+    </div>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       /* Estilos generales */
