--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         color: white;
         padding: 20px;
         text-align: center;
+        background-image: url('https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Logo_UTFSM.png?raw=true');
+        background-repeat: no-repeat;
+        background-size: cover;
       }
 
       nav {
