--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
       }
 
       nav li {
+        margin: 0 16px;
         padding: 10px;
         border-bottom: 1px solid #ddd;
       }
 
       nav li a {
+        
         text-decoration: none;
         color: #333;
       }
@@ -93,6 +95,7 @@
   <body>
     <header>
       <h1>SmartCanchasUSM</h1>
+      <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Logo_UTFSM.png?raw=true" id="logo">
     </header>
     
     <section>
