--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
       }
 
       nav ul {
-        list-style-type: none;
+        list-style: none;
+        margin: 0;
         padding: 0;
+        display: flex;
+        align-items: center;
       }
 
       nav li {
