--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       }
 
       header {
-      background-color: #013566;
-      color: #fff;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 16px;
+        background-color: #013566;
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px;
       }
       
       #logo {
-      width: 100px;
-      height: auto;
+        width: 75px;
+        height: auto;
       }
       
       nav {
@@ -35,6 +35,7 @@
 
       nav ul {
         list-style: none;
+        width: 100%;
         margin: 0;
         padding: 0;
         display: flex;
@@ -42,6 +43,7 @@
       }
 
       nav li {
+        width: 100%;
         margin: 0 16px;
         padding: 10px;
         border-bottom: 1px solid #ddd;
