--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 15vw;
+        height: auto;
         padding: 8px;
       }
       
