--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 15vw;
-        height: auto;
+        width: auto;
+        height: 100vh;
         padding: 8px;
       }
       
