--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
           width: 100%;
           max-width: none;
         }
+        #logo {
+          width: 100%;
+          height: auto;
+        }
       }
       </style>
   </head>
