--- a/index.html
+++ b/index.html
@@ -99,16 +99,42 @@
 
       /* Cambios para dispositivos móviles */
       @media screen and (max-width: 1080px) {
+       #logo {
+          width: 100%;
+          height: auto;
+        }
+        
         nav {
           width: 100%;
           max-width: none;
         }
-        #logo {
-          width: 100%;
-          height: auto;
+
+        nav ul {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: 16px 0;
         }
+      
+      nav li {
+        width: 100%;
+        margin: 8px 0;
+        border-bottom: none;
       }
-      </style>
+  
+      nav li:last-child {
+        margin-bottom: 0;
+      }
+
+      nav li a {
+        padding: 8px;
+      }
+
+      nav .icon {
+        display: block;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <header>
