--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 8px;
+        padding: 16px;
+        flex-wrap: wrap; /* Agregar esta regla para que los elementos se ajusten a una nueva línea */
       }
 
       #logo {
-        width: 150px;
-        height: auto;
+        width: 150px; /* Establecer un ancho máximo para la imagen */
+        height: auto; /* Asegurarse de que la altura se ajuste automáticamente */
       }
 
       nav {
@@ -29,7 +30,7 @@
         width: 100%;
         max-width: 400px;
         background-color: #f1f1f1;
-        padding: 10px;
+        padding: 20px;
         box-sizing: border-box;
       }
 
@@ -99,9 +100,15 @@
 
       /* Cambios para dispositivos móviles */
       @media screen and (max-width: 1080px) {
+        header {
+          padding: 4px;
+        }
+  
+        
         #logo {
-          width: 100%;
+          width: 120px;
           height: auto;
+          padding: 8px 0;
          }
         
         nav {
