--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20arriendo.png?raw=true" alt="Ejemplo del correo de arriendo" class="img-responsive">
         <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p>
         <p>Ejemplo de arriendo exitoso: </p> 
-        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo exitoso">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo exitoso" class="img-responsive">
         <p>Ejemplo de arriendo fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
-        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo fallido">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo fallido" class="img-responsive">
         <br />
       </section>
     </article>
