--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
         margin: 0;
         font-size: 16px;
       }
-
+      
+      p {
+        text-align: justify;
+      }
+  
       /* Cambios para dispositivos móviles */
       @media screen and (max-width: 1080px) {
         
