--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
       }
 
       .main {
-        margin: 48px 0;
+        margin: 24px 0;
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
       }
       
+      /* Clase para las imagenes para ajustar su tamaño segun la resolución de la pantalla */
       img {
         display: block;
         max-width: 100%;
@@ -92,11 +93,6 @@
         color: #fff;
         padding: 16px;
         text-align: center;
-      }
-
-      footer p {
-        margin: 0;
-        font-size: 16px;
       }
       
       p {
