--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         align-items: flex-start;
       }
       
-      /* Clase para las imagenes para ajustar su tamaño segun la resolución de la pantalla */
+      /* Ajustar imagenes según resolución */
       img {
         display: block;
         max-width: 100%;
