--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         justify-content: space-between;
         align-items: center;
         padding: 16px;
-        flex-wrap: wrap; /* Agregar esta regla para que los elementos se ajusten a una nueva línea */
+        flex-wrap: wrap; /* Agregar regla para que los elementos se ajusten a una nueva línea */
       }
 
       #logo {
-        width: 150px; /* Establecer un ancho máximo para la imagen */
-        height: auto; /* Asegurarse de que la altura se ajuste automáticamente */
+        width: 150px; /* Ancho máximo para la imagen */
+        height: auto; /* Ajustar altura automáticamente */
       }
 
       nav {
