--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="estilos.css">
     <title>SmartCanchasUSM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
