--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <footer>
-      <p>Derechos reservados &copy; 2023</p>
+      <p>SmartCanchasUSM &copy; 2023 - Todos los derechos reservados</p>
     </footer>
   </body>
 </html>
