--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </article>
     </section>
     
-    <main>
+    <article>
       <section id="Horarios">
         <h2>Horario del arriendo de canchas</h2>
         <p>Es importante mencionar que el proceso de arriendo de canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
@@ -55,7 +55,7 @@
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo fallido" class="img-responsive">
         <br />
       </section>
-    </main>
+    </article>
 
     <section id="about">
       <h3>Acerca de SmartCanchasUSM</h3>
