--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     
     <section>
-      <nav class="skew-menu">
+      <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#Horarios">Horarios de las canchas</a></li>
