--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
         <br />
       </section>
     </article>
-
-    <section id="about">
-      <h3>Acerca de SmartCanchasUSM</h3>
-      <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
-      <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@gmail.com</p>
-    </section>
+    
+    <article>
+      <section id="about">
+        <h3>Acerca de SmartCanchasUSM</h3>
+        <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
+        <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@gmail.com</p>
+      </section>
+    x</article>
 
     <footer>
       <p>SmartCanchasUSM &copy; 2023 - Todos los derechos reservados</p>
