--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
         <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@gmail.com</p>
       </section>
-    x</article>
+    </article>
 
     <footer>
       <p>SmartCanchasUSM &copy; 2023 - Todos los derechos reservados</p>
