--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <header>
-      <title>SmartCanchasUSM</title>
+      <h1>SmartCanchasUSM</h1>
       <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Logo_UTFSM.png?raw=true" id="logo">
     </header>
     
