--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section id="Solicitud">
         <h3>Solicitud de arriendo</h3>
         <p>Para solicitar canchas deben mandar correo a smartcanchas@gmail.com con el siguiente formato</p>   
-        <a href="Planilla/Correo.html">Visualizacion correo de arriendo</a>
+        <a href="Planilla/Correo.html">Visualizacion de formato del correo de arriendo</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20arriendo.png?raw=true" alt="Ejemplo del correo de arriendo" class="img-responsive">
         <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p>
