--- a/Planilla/Conversor.html
+++ b/Planilla/Conversor.html
@@ -53,6 +53,10 @@
 			<td>12:15/12:50<br>12:50/13:25</td>
 		</tr>
 		<tr>
+			<td>Almuerzo</td>
+			<td>13:25/14:30</td>
+		</tr>
+		<tr>
 			<td>9<br>10</td>
 			<td>14:30/15:05<br>15:05/15:40</td>
 		</tr>
